--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,8 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.postgresql:postgresql'
-    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.flywaydb:flyway-core:9.0.0'
+    implementation 'org.postgresql:postgresql:42.5.0'
 
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
