Создан Dockerfile. убрано заполнение дб. с миграции, созданы скрипты для очистки и случайного заполнения бд

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - postgres
   app:
     build: .
-    container_name: museum-app
+    container_name: .
     restart: always
     depends_on:
       - postgres
