Создан Dockerfile. убрано заполнение дб. с миграции, созданы скрипты для очистки и случайного заполнения бд

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/museum
+spring.datasource.url=jdbc:postgresql://museum-db:5432/museum
 spring.datasource.username=admin
 spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
