--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,27 +8,54 @@ services:
       POSTGRES_DB: museum
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: secret
-      POSTGRES_INITDB_ARGS: "--encoding=UTF8"  # Добавил, чтобы избежать проблем с кодировкой
+      POSTGRES_INITDB_ARGS: "--encoding=UTF8"
     ports:
       - "5432:5432"
     volumes:
       - museum_data:/var/lib/postgresql/data
       - ./src/main/resources/db/migration:/docker-entrypoint-initdb.d # Подключаем папку с миграциями
 
+  generate-data:
+    image: python:3.10-slim
+    container_name: generate-data
+    working_dir: /app
+    volumes:
+      - ./generate_data.py:/app/generate_data.py
+    command: >
+      sh -c "pip install psycopg2-binary && python generate_data.py"
+    depends_on:
+      - postgres
+    networks:
+      - app-network
+
+  #  clear-data:
+  #    image: python:3.10-slim
+  #    container_name: clear-data
+  #    working_dir: /app
+  #    volumes:
+  #      - ./clear_data.py:/app/clear_data.py
+  #    command: >
+  #      sh -c "pip install psycopg2 && python clear_data.py"
+  #    depends_on:
+  #      - postgres
+  #    networks:
+  #      - app-network
+
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin
     restart: always
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@example.com  # Укажите ваш email
-      PGADMIN_DEFAULT_PASSWORD: secret          # Укажите ваш пароль
+      PGADMIN_DEFAULT_EMAIL: admin@example.com
+      PGADMIN_DEFAULT_PASSWORD: secret
     ports:
       - "5050:80"
     depends_on:
       - postgres
+
   app:
     build: .
-    container_name: .
+    container_name: museum-app
     restart: always
     depends_on:
       - postgres
@@ -41,3 +68,6 @@ services:
 
 volumes:
   museum_data:
+
+networks:
+  app-network:
