--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,6 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.driver=org.postgresql.Driver
-spring.flyway.url=jdbc:postgresql://localhost:5432/museum
+spring.flyway.url=jdbc:postgresql://museum-db:5432/museum
 spring.flyway.user=admin
 spring.flyway.password=secret
